@@ -1,3 +1,8 @@
+2011-02-23  Philippe Brochard  <pbrochard@common-lisp.net>
+
+	* src/clfswm.lisp (main-unprotected): Create the configuration
+	menu only once at startup.
+
 2011-02-22  Desmond O. Chang <dochang@gmail.com>
 
 	* contrib/amixer.lisp: Add a volume mode inspired by the emms
